roles/openshift_cryostat/docs/examples/quarkus-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-test
spec:
  selector:
    matchLabels:
      deployment: quarkus-test
  template:
    metadata:
      labels:
        deployment: quarkus-test
    spec:
      containers:
      - image: quay.io/andrewazores/quarkus-test:0.0.10
        name: quarkus-test
        ports:
        - containerPort: 10010
          protocol: TCP
        - containerPort: 9097
          protocol: TCP
