roles/openshift_cryostat/docs/examples/quarkus-test-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-test
spec:
  port:
    targetPort: 10010
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: quarkus-test
